# ripple

./: .env.example  .gitignore  PHASE_3.5_QA.md  README.md  WHATSAPP_SETUP.md  electron-builder.yml  electron.vite.config.ts  index.html  package-lock.json  package.json  playwright.config.ts  ripple-test.txt  skills-lock.json  tsconfig.node.json  tsconfig.web.json  vitest.config.ts  vitest.setup.ts
cursor/: rules.md  test.md  wave0.md
docs/: DESKTOP-AUTOMATION-COMMANDS.md  P7-FEATURES.md  P7-NATIVE-LAYER-PLAN.md  P8-LAST-OPENED.md  P8-SEMANTIC.md  P8-TEMPORAL-PDF.md  P8.5-ARCHITECTURE-AUDIT.md  P8.5-DEVELOPMENT-PLAN.md  P8.5-E4-PRODUCTION-FIX-PLAN.md  P8.5-MANUAL-TEST-COMMANDS.md  P8.5-P5-IMPLEMENTATION-PLAN.md  P8.5-P5.6-OS-CONTROL-E2E-IMPLEMENTATION-PLAN.md  P8.5-P6-P7-IMPLEMENTATION-PLAN.md  P8.5-PLANNER-V2.md  P8.5-REMAINING.md  P8.5-RUNTIME-GRAPH.md  P8.5-SEMANTIC-INTENT-ROUTER-IMPLEMENTATION-PLAN.md  P8.5-UNIVERSAL-PLANNER.md  P8B-TEST-GUIDE.md  P9-AGENT-BRAIN-ARCHITECTURE.md  PHASE-3-THROUGH-6-COMPLETED.md  PHASE-7-AND-P85-COMPLETED.md  RIPPLE-DESKTOP-PHASE-0-TO-8-5-COMPLETE.md  test5.-6.md  wispr.md
electron/: osTestBridge.ts
native-host/: com.ripple.whatsapp.installed.json  com.ripple.whatsapp.json  install-windows.ps1  native-host.js
ripple-chrome-extension/: background.js  (+12 more)
ripple-native/: Cargo.toml  README.md
ripple-native/src/: config.rs  elevation.rs  events.rs  foreground.rs  hotkeys.rs  main.rs  mouse.rs  ocr.rs  send_input.rs  session.rs  uia.rs  window_list.rs  window_ops.rs
ripple-native/src/ipc/: mod.rs  pipe_server.rs  protocol.rs
(+650 files in other folders)
